Forgot to add a localization button on the aboutme page

--- a/pages/AboutMe.html
+++ b/pages/AboutMe.html
@@ -34,6 +34,11 @@
                 </div>
 
                 <div class="navbar-collapse">
+                    <ul class="nav navbar-nav navbar-left">
+                        <li style="margin-right: 1em;">
+                            <a href="/pages/localization/AboutMe_eng.html" title="" class="btn btn-lg anchor-link">ENG</a>
+                        </li>
+                    </ul>
                     <ul class="nav navbar-nav navbar-right">
                         <li style="margin-right: 1em;">
                             <a href="../index.html" class="btn btn-lg anchor-link">Terug</a>
