--- a/pages/localization/AboutMe_eng.html
+++ b/pages/localization/AboutMe_eng.html
@@ -34,6 +34,11 @@
                 </div>
 
                 <div class="navbar-collapse">
+                    <ul class="nav navbar-nav navbar-left">
+                        <li style="margin-right: 1em;">
+                            <a href="/pages/localization/AboutMe.html" title="" class="btn btn-lg anchor-link">NL</a>
+                        </li>
+                    </ul>
                     <ul class="nav navbar-nav navbar-right">
                         <li style="margin-right: 1em;">
                             <a href="index_eng.html" class="btn btn-lg anchor-link">Back</a>
