--- a/pages/localization/AboutMe_eng.html
+++ b/pages/localization/AboutMe_eng.html
@@ -36,7 +36,7 @@
                 <div class="navbar-collapse">
                     <ul class="nav navbar-nav navbar-left">
                         <li style="margin-right: 1em;">
-                            <a href="/pages/localization/AboutMe.html" title="" class="btn btn-lg anchor-link">NL</a>
+                            <a href="/pages/AboutMe.html" title="" class="btn btn-lg anchor-link">NL</a>
                         </li>
                     </ul>
                     <ul class="nav navbar-nav navbar-right">
